8359386: Fix incorrect value for max_size of C2CodeStub when APX is used